# LNU_ParallelDistributedCloudComputing

./: README.md
paralel/: lab_1.cs  lab_3.cs  lab_4.cs  lab_6  lab_7  lab_8
paralel/lab_10/: CMakeLists.txt  conanfile.txt  main.cpp
paralel/lab_11/: CMakeLists.txt  example_file0.txt  example_file1.txt  example_file2.txt  example_file3.txt  main.cpp
paralel/lab_12/: CMakeLists.txt  main.cu  main_run  run.sh
paralel/lab_13/: main.cpp  not_my.cpp  run
paralel/lab_14/: comparision.txt
paralel/lab_9/: CMakeLists.txt  main.cpp
АЛГОРИТМ ДЕЙКСТРИ/: Program 1.cs  Program.cs  Багінська Маргарита Дейкстра.docx
АЛГОРИТМ ПРИМА/: Program.cs  Багінська Маргарта Прима.docx
Алгоритм Флойда/: Багінська Маргарита Флойд.docx
Додавання (віднімання) матриць/: Program.cs
Колок/: Колоквіум - Відповіді – копія.docx  Паралельні_та_розподілені_обчислення_екзамен (2).docx  Паралельні_та_розподілені_обчислення_екзамен.docx  Питання на колоквіум.doc  колоквіум_розподілені_системи+CUDA.doc
Множення матриць/: Program.cs  Багінська_Маргарита_множення_матриць.docx
Паралельні та розподільні обч/Lab1/: Lab1.sln
Паралельні та розподільні обч/Lab2/: Lab2.sln  Program.cs
Паралельні та розподільні обч/lab10/: lab10.cpp  lab10.sln  lab10.vcxproj  lab10.vcxproj.filters.txt
РОЗПАРАЛЕЛЕННЯ МНОЖЕННЯ МАТРИЦЬ CUDA/: Багінська Маргарита CUDA.docx  Сенюк-ЛР8.doc
СЛАР/: Program.cs  Багінська Маргарита СЛАР.docx
ФОРМИ/: Form1.Designer.cs  Form1.cs  Program.cs
Форми 2/: Form1.cs  FormBall.cs  FormSine.cs  FormSquare.cs  TriangleForm.cs  Багінська Маргарита Форми.docx
(+97 files in other folders)
